Setup posts backend
