# backend/internal/models/review.go
@@ -1,0 +1,10 @@
+package models
+
+import "time"
+
+type Review struct {
+	ID         int
+	CreatedAt  time.Time
+	LocationId int
+	Rating     int
+}
